--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,7 +13,14 @@
 }
 
 .btnNow {
-    margin-top: 40%;
+    padding: 0.7em 2em 0.7em;
+    border: none;
+    border-radius: 35px;
+    background-color: #fff;
+}
+
+.inputSearch {
+    margin: 30% 0 1%;
     padding: 1em 2em 1em;
     border: none;
     border-radius: 35px;
