--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,38 +1,59 @@
 .header {
-    padding: 2% 0 2%;
-    background-color: #31b8f5;
+  padding: 1%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #015079;
+  color: #fff;
 }
 
-.sectionSearch {
-    height: 95vh;
-    background-image: url(/public/img/tumblr_nd0a6qdllq1tchrkco1_500.gif);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-
-    text-align: center;
+.title, .description {
+  font-size: 1.2em;
+  font-weight: 600;
 }
 
-.btnNow {
-    padding: 0.7em 2em 0.7em;
-    border: none;
-    border-radius: 35px;
-    background-color: #fff;
+.main {
+  padding: 1% 0 0;
+  background: linear-gradient(90deg, #009cc5, #00d2ff);  background-repeat: no-repeat;
 }
 
-.inputSearch {
-    margin: 30% 0 1%;
-    padding: 1em 2em 1em;
-    border: none;
-    border-radius: 35px;
-    background-color: #fff;
+.tempo {
+  margin: auto;
+  width: 40%;
+  padding: 2% 0 2%;
+  border-radius: 10px;
+  background: #fff;
+  text-align: center;
 }
 
-.sectionView {
- 
-
+.view {
+  display: none;
+  font-size: 3em;
 }
 
-.temp {
-  flex-basis: 100%;
-  font-size: 5em;
+.containerInput {
+  margin: 0 auto;
 }
+
+.inputCity, .inputState {
+  margin: 4px 4px;
+  padding: 2%;
+  border: 2px solid #015079;
+  border-radius: 10px;
+  width: 60%;
+}
+
+.footer {
+  background: #404040;
+}
+
+
+
+
+
+
+
+
+
+
+
